chore: add error handling and update configuration files for Spring Boot 4 migration
- Introduced a new `errors.txt` file to document error handling strategies.
- Updated `pom.xml` files across multiple modules to replace deprecated dependencies and ensure compatibility with Spring Boot 4.
- Modified application properties to disable date serialization as timestamps, aligning with Spring Boot 4 requirements.
- Enhanced various Java classes to improve code readability and maintainability, including the use of `Path.of()` for file paths.
- Improved logging and exception handling in several services to provide better traceability and error management.
- Updated third-party dependency lists to reflect the latest versions and licenses.